Updated index and CV

--- a/index.html
+++ b/index.html
@@ -1,102 +1,129 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Zhexin Wu's Homepage</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-        <link rel="icon" href="https://ethz.ch/etc/designs/ethz/img/icons/ETH-APP-Icons-Theme-white/58-Settings.png">
-        <link rel="stylesheet" href="css/index_style.css">
-    </head>
-    <body>
-        <header class="container-fluid fixed-top">
-            <div class="row">
-                <div class="col-5">
-                    <a href="https://mtec.ethz.ch/" target="_blank"><img class="img-fluid rounded" src="images/ETH-Icon-D-MTEC.png" alt="ETH-MTEC" width="80"></a> <a href="https://ee.ethz.ch/" target="_blank"><img class="img-fluid rounded" src="images/ETH-Icon-D-ITET.png" alt="ETH-EEIT" width="80"></a> <a href="https://ece.engin.umich.edu/" target="_blank"><img class="img-fluid rounded" src="images/UM_ECE.png" alt="UM-ECE" width="80"></a>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Zhexin Wu's Homepage</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="icon" href="https://ethz.ch/etc/designs/ethz/img/icons/ETH-APP-Icons-Theme-white/58-Settings.png">
+    <link rel="stylesheet" href="css/index_style.css">
+</head>
+
+<body>
+    <header class="container-fluid fixed-top">
+        <div class="row">
+            <div class="col-5">
+                <a href="https://mtec.ethz.ch/" target="_blank"><img class="img-fluid rounded"
+                        src="images/ETH-Icon-D-MTEC.png" alt="ETH-MTEC" width="80"></a> <a href="https://ee.ethz.ch/"
+                    target="_blank"><img class="img-fluid rounded" src="images/ETH-Icon-D-ITET.png" alt="ETH-EEIT"
+                        width="80"></a> <a href="https://ece.engin.umich.edu/" target="_blank"><img
+                        class="img-fluid rounded" src="images/UM_ECE.png" alt="UM-ECE" width="80"></a>
+            </div>
+            <ul class="nav nav-pills justify-content-end col-7">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#internships">Internships</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#selected-projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="cv.html" target="_blank">CV</a>
+                </li>
+            </ul>
+        </div>
+        <hr>
+    </header>
+
+    <div class="container" id="main">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-4 text-center mb-2 mb-lg-0">
+                <img class="rounded img-fluid" src="images/me.jpg" alt="Me">
+            </div>
+            <div class="card col-12 col-lg-6" id="about-me">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4>ABOUT ME</h4>
+                        <hr>
+                    </div>
+                    <div class="card-text">
+                        <p>
+                            Hi, I'm Zhexin (Tony) Wu. I have completed the CFA Program Level II. I'm currenly a
+                            third-year MSc student at the <a href="https://mtec.ethz.ch/" target="_blank">Department of
+                                Management, Technology and Economics (MTEC)</a> at <a href="https://ethz.ch/en.html"
+                                target="_blank">ETH Zürich</a>. Passionate about merging technology and finance, I focus
+                            on developing explainable, data-driven quant trading strategies rooted in deep insights from
+                            optimization, machine learning, and strong fundamentals.
+                        </p>
+                        <p>
+                            Prior to this, I achieved an MSc with distinction from the <a href="https://ee.ethz.ch/"
+                                target="_blank">Department of Information Technology and Electrical Engineering
+                                (EEIT)</a> at <a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a>.
+                            Preceding that, I spent a year as an MS student within the <a
+                                href="https://ece.engin.umich.edu/" target="_blank">Department of Electrical and
+                                Computer Engineering (ECE)</a> at the <a href="https://umich.edu/"
+                                target="_blank">University of Michigan - Ann Arbor</a>. Both at ETH Zürich and the
+                            University of Michigan, my focus has been on Signal Processing & Machine Learning,
+                            specializing in optimization methods and deep learning for biomedical image processing and
+                            analysis.
+                        </p>
+                    </div>
                 </div>
-                <ul class="nav nav-pills justify-content-end col-7">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#internships">Internships</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#selected-projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cv.html" target="_blank">CV</a>
-                    </li>
+            </div>
+            <hr class="mt-1">
+
+            <div class="card col-12" id="internships">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4>INTERNSHIPS</h4>
+                        <hr>
+                    </div>
+                </div>
+                <ul class="list-group">
+                    <!-- Rendered by JS -->
                 </ul>
             </div>
-            <hr>
-        </header>
+            <hr class="mt-1">
 
-        <div class="container" id="main">
-            <div class="row justify-content-center">
-                <div class="col-12 col-lg-4 text-center mb-2 mb-lg-0">
-                    <img class="rounded img-fluid" src="images/me.jpg" alt="Me">
-                </div>
-                <div class="card col-12 col-lg-6" id="about-me">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h4>ABOUT ME</h4>
-                            <hr>
-                        </div>
-                        <div class="card-text">
-                            <p>
-                                Hi, I'm Zhexin (Tony) Wu. I have completed the CFA Program Level I. I'm currenly a third-year MSc student at the <a href="https://mtec.ethz.ch/" target="_blank">Department of Management, Technology and Economics (MTEC)</a> at <a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a>. Passionate about merging technology and finance, I focus on developing explainable, data-driven quant trading strategies rooted in deep insights from optimization, machine learning, and strong fundamentals.
-                            </p>
-                            <p>
-                                Prior to this, I achieved an MSc with distinction from the <a href="https://ee.ethz.ch/" target="_blank">Department of Information Technology and Electrical Engineering (EEIT)</a> at <a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a>. Preceding that, I spent a year as an MS student within the <a href="https://ece.engin.umich.edu/" target="_blank">Department of Electrical and Computer Engineering (ECE)</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan - Ann Arbor</a>. Both at ETH Zürich and the University of Michigan, my focus has been on Signal Processing & Machine Learning, specializing in optimization methods and deep learning for biomedical image processing and analysis.
-                            </p>
-                        </div>
+
+            <div class="card col-12" id="selected-projects">
+                <div class="card-body">
+                    <div class="card-title">
+                        <h4>SELECTED PROJECTS</h4>
+                        <hr>
                     </div>
                 </div>
-                <hr class="mt-1">
-
-                <div class="card col-12" id="internships">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h4>INTERNSHIPS</h4>
-                            <hr>
-                        </div>
-                    </div>
-                    <ul class="list-group">
-                        <!-- Rendered by JS -->
-                    </ul>
-                </div>
-                <hr class="mt-1">
-
-
-                <div class="card col-12" id="selected-projects">
-                    <div class="card-body">
-                        <div class="card-title">
-                            <h4>SELECTED PROJECTS</h4>
-                            <hr>
-                        </div>
-                    </div>
-                    <ul class="list-group">
-                        <!-- Rendered by JS -->
-                    </ul>
-                </div>
+                <ul class="list-group">
+                    <!-- Rendered by JS -->
+                </ul>
             </div>
         </div>
+    </div>
 
-        <footer class="fixed-bottom justify-content-center">
-            <div class="text-center">
-                Contact Me via
-                <a href="mailto:zhexwu@student.ethz.ch" target="_blank"><i class="fas fa-envelope-square"></i></a>
-                <a href="https://github.com/10258392511" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/zhexin-tony-wu-3744b7191/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </footer>
-       
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="js/index_js.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    </body>
+    <footer class="fixed-bottom justify-content-center">
+        <div class="text-center">
+            Contact Me via
+            <a href="mailto:zhexwu@student.ethz.ch" target="_blank"><i class="fas fa-envelope-square"></i></a>
+            <a href="https://github.com/10258392511" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/zhexin-tony-wu-3744b7191/" target="_blank"><i
+                    class="fab fa-linkedin-in"></i></a>
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="js/index_js.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
